[project]
name = "kag"
version = "0.1.0"
description = "Kolmogorov-Arnold Geometry analysis toolkit for neural network internals"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "wandb>=0.24.0",
    "pytorch-lightning>=2.0",
    "datasets>=2.14",
    "hf>=1.3.5",
    "tiktoken>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kag_core"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B028",   # warnings.warn without stacklevel
    "B905",   # zip without strict=
    "SIM102", # nested if statements
    "SIM105", # contextlib.suppress suggestion
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
